# DataBridgesAPI

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  ALPSPythonDataBridgesCall.py  LICENSE.txt  README.md  SamplePythonDataBridgesCall.py  data_bridges_api_config.yaml  data_bridges_api_config_sample.yaml  environment.yml  example.py  foodsecurity_apis.py  git_push.sh  gorp_output.csv  ipc_output.csv  pyproject.toml  requirements.txt  sample_R_load.R  sample_python_load.py  sample_stata_load.py  setup.py  spec-file.txt  tox.ini
.config/: data_bridges_api_config.yaml
.openapi-generator/: FILES  VERSION
data_bridges/: data_bridges.py
data_bridges_client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py  token.py
data_bridges_utils/: __init__.py  get_data.py  load_stata.py
data_bridges_wrapper/: data_bridges_get_data.py
databridgesapi/: __init__.py  api_connector.py  exceptions.py
docs/: BadRequestDTO.md  CommoditiesApi.md  CommodityDTO.md  CommodityPriceDTO.md  CommodityProcessingDTO.md  CommodityQualityDTO.md  CommodityUnitsApi.md  Coordinate.md  CoordinateEqualityComparer.md  CoordinateSequence.md  CoordinateSequenceFactory.md  CurrencyApi.md  CurrencyDTO.md  Dimension.md  EconomicDataApi.md  EconomicDataDTO.md  EconomicIndicatorProperty.md  EconomicIndicatorPropertyPagedResult.md  Envelope.md  Feature.md  FoodSecurityApi.md  Geometry.md  GeometryFactory.md  GeometryOverlay.md  GorpApi.md  GorpCountryApiDto.md  GorpGlobalApiDto.md  GorpRegionalApiDto.md  GorpValueWithChanges.md  IAttributesTable.md  (+55 more)
(+239 files in other folders)
